force-app/main/default/objects/vlocity_cmt__ContractLineItem__c/fields/AttributeMetadataChanges__c.field-meta.xml
<CustomField>
    <fullName>AttributeMetadataChanges__c</fullName>
    <label>Attribute Metadata Changes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>