force-app/main/default/objects/vlocity_cmt__ContractLineItem__c/fields/EffectiveOneTimeCostTotal__c.field-meta.xml
<CustomField>
    <fullName>EffectiveOneTimeCostTotal__c</fullName>
    <label>Effective One Time Cost Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>