force-app/main/default/objects/vlocity_cmt__ContractLineItem__c/fields/EffectiveOneTimeLoyaltyTotal__c.field-meta.xml
<CustomField>
    <fullName>EffectiveOneTimeLoyaltyTotal__c</fullName>
    <label>Effective One Time Loyalty Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>