force-app/main/default/objects/vlocity_cmt__ContractLineItem__c/fields/EffectiveOneTimeTotal__c.field-meta.xml
<CustomField>
    <fullName>EffectiveOneTimeTotal__c</fullName>
    <label>Effective One Time Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>