force-app/main/default/objects/vlocity_cmt__ContractLineItem__c/fields/EffectiveQuantity__c.field-meta.xml
<CustomField>
    <fullName>EffectiveQuantity__c</fullName>
    <label>Effective Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>