force-app/main/default/objects/vlocity_cmt__ContractLineItem__c/fields/EffectiveRecurringCostTotal__c.field-meta.xml
<CustomField>
    <fullName>EffectiveRecurringCostTotal__c</fullName>
    <label>Effective Recurring Cost Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>