force-app/main/default/objects/vlocity_cmt__ContractLineItem__c/fields/EffectiveRecurringTotal__c.field-meta.xml
<CustomField>
    <fullName>EffectiveRecurringTotal__c</fullName>
    <label>Effective Recurring Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>