force-app/main/default/objects/vlocity_cmt__ContractLineItem__c/fields/EffectiveUsageCostTotal__c.field-meta.xml
<CustomField>
    <fullName>EffectiveUsageCostTotal__c</fullName>
    <label>Effective Usage Cost Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>