force-app/main/default/objects/vlocity_cmt__ContractLineItem__c/fields/EffectiveUsagePriceTotal__c.field-meta.xml
<CustomField>
    <fullName>EffectiveUsagePriceTotal__c</fullName>
    <label>Effective Usage Price Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>