force-app/main/default/objects/vlocity_cmt__ContractLineItem__c/fields/EffectiveUsageQuantity__c.field-meta.xml
<CustomField>
    <fullName>EffectiveUsageQuantity__c</fullName>
    <label>Effective Usage Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>