force-app/main/default/objects/vlocity_cmt__ContractLineItem__c/fields/InCartQuantityMap__c.field-meta.xml
<CustomField>
    <fullName>InCartQuantityMap__c</fullName>
    <label>InCartQuantityMap</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>