force-app/main/default/objects/vlocity_cmt__ContractLineItem__c/fields/OneTimeCost__c.field-meta.xml
<CustomField>
    <fullName>OneTimeCost__c</fullName>
    <label>One Time Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>