force-app/main/default/objects/vlocity_cmt__ContractLineItem__c/fields/OneTimeCostTotal__c.field-meta.xml
<CustomField>
    <fullName>OneTimeCostTotal__c</fullName>
    <label>One Time Cost Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>