force-app/main/default/objects/vlocity_cmt__ContractLineItem__c/fields/OneTimeLoyaltyPrice__c.field-meta.xml
<CustomField>
    <fullName>OneTimeLoyaltyPrice__c</fullName>
    <label>One Time Loyalty Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>