force-app/main/default/objects/vlocity_cmt__ContractLineItem__c/fields/OneTimeLoyaltyTotal__c.field-meta.xml
<CustomField>
    <fullName>OneTimeLoyaltyTotal__c</fullName>
    <label>One Time Loyalty Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>