force-app/main/default/objects/vlocity_cmt__ContractLineItem__c/fields/OneTimeMargin__c.field-meta.xml
<CustomField>
    <fullName>OneTimeMargin__c</fullName>
    <label>One Time Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>