force-app/main/default/objects/vlocity_cmt__ContractLineItem__c/fields/ProductHierarchyGroupKeyPath__c.field-meta.xml
<CustomField>
    <fullName>ProductHierarchyGroupKeyPath__c</fullName>
    <label>Product Hierarchy Group Key Path</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>