force-app/main/default/objects/vlocity_cmt__ContractLineItem__c/fields/ProductHierarchyPath__c.field-meta.xml
<CustomField>
    <fullName>ProductHierarchyPath__c</fullName>
    <label>Product Hierarchy Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>