force-app/main/default/objects/vlocity_cmt__ContractLineItem__c/fields/RecurringCost__c.field-meta.xml
<CustomField>
    <fullName>RecurringCost__c</fullName>
    <label>Recurring Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>