force-app/main/default/objects/vlocity_cmt__ContractLineItem__c/fields/RecurringCostTotal__c.field-meta.xml
<CustomField>
    <fullName>RecurringCostTotal__c</fullName>
    <label>Recurring Cost Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>