force-app/main/default/objects/vlocity_cmt__ContractLineItem__c/fields/RecurringMargin__c.field-meta.xml
<CustomField>
    <fullName>RecurringMargin__c</fullName>
    <label>Recurring Margin</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>