force-app/main/default/objects/vlocity_cmt__ContractLineItem__c/fields/UsageCostTotal__c.field-meta.xml
<CustomField>
    <fullName>UsageCostTotal__c</fullName>
    <label>Usage Cost Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>