force-app/main/default/objects/vlocity_cmt__ContractLineItem__c/fields/UsageMargin__c.field-meta.xml
<CustomField>
    <fullName>UsageMargin__c</fullName>
    <label>Usage Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>