force-app/main/default/objects/vlocity_cmt__ContractLineItem__c/fields/UsageMeasurementId__c.field-meta.xml
<CustomField>
    <fullName>UsageMeasurementId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Charge Measurement</label>
    <referenceTo>vlocity_cmt__ChargeMeasurement__c</referenceTo>
    <relationshipLabel>Contract Lines</relationshipLabel>
    <relationshipName>Contract_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>