force-app/main/default/objects/vlocity_cmt__ContractLineItem__c/fields/UsageQuantity__c.field-meta.xml
<CustomField>
    <fullName>UsageQuantity__c</fullName>
    <label>Usage Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>