force-app/main/default/objects/vlocity_cmt__ContractLineItem__c/fields/UsageUnitCost__c.field-meta.xml
<CustomField>
    <fullName>UsageUnitCost__c</fullName>
    <label>Usage Cost</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>