force-app/main/default/objects/vlocity_cmt__ContractLineItem__c/fields/UsageUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>UsageUnitPrice__c</fullName>
    <label>Usage Price</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>